src/objects/TitleWorkJob__c.object
<CustomObject>
    <description>Contains details pertaining to running title for a particular area.  Includes Landmen, Integration Review, and Attorney Review records.</description>
    <fields>
        <fullName>completionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>egnyteLink__c</fullName>
        <inlineHelpText>link to the title folder in Egnyte</inlineHelpText>
        <label>Egnyte Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>landGridTract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Land Grid Tract</label>
        <referenceTo>LandGridTract__c</referenceTo>
        <relationshipLabel>Title Work Jobs</relationshipLabel>
        <relationshipName>titleWorkJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>leaseAnalysis__c</fullName>
        <label>Lease Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>leaseholdTitle__c</fullName>
        <label>Leasehold Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mineralTitle__c</fullName>
        <label>Mineral Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>previousId__c</fullName>
        <description>For use in migrating data from old Title Work Jobs</description>
        <label>Previous Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srpOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SRP Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>titleWorkJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Attorney Review - Complete</fullName>
                    <isActive>false</isActive>
                    <label>Attorney Review - Complete</label>
                </value>
                <value>
                    <fullName>In Progress - Attorney Review</fullName>
                    <isActive>false</isActive>
                    <label>In Progress - Attorney Review</label>
                </value>
                <value>
                    <fullName>In Progress - Integration Review</fullName>
                    <isActive>false</isActive>
                    <label>In Progress - Integration Review</label>
                </value>
                <value>
                    <fullName>Integration Review - Complete</fullName>
                    <isActive>false</isActive>
                    <label>Integration Review - Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>surfaceTitle__c</fullName>
        <label>Surface Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>thoroughness__c</fullName>
        <label>Thoroughness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>titleNoteQuality__c</fullName>
        <label>Title Note Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>titleSystemEntryAccuracy__c</fullName>
        <label>Title System Entry Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>titleWorkTracker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Title Work Tracker</label>
        <referenceTo>TitleWorkTracker__c</referenceTo>
        <relationshipLabel>Title Work Jobs</relationshipLabel>
        <relationshipName>titleWorkJobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tractComplexityLeaseholdTitle__c</fullName>
        <label>Tract Complexity Leasehold Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tractComplexityMineralTitle__c</fullName>
        <label>Tract Complexity Mineral Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tractComplexitySurfaceTitle__c</fullName>
        <label>Tract Complexity Surface Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tractTitleComplexityNotes__c</fullName>
        <label>Tract Title Complexity Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tractsCO__c</fullName>
        <description>link to Tracts.CO</description>
        <label>TRACTS.CO</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landman</fullName>
                    <default>true</default>
                    <label>Landman</label>
                </value>
                <value>
                    <fullName>Integration Review</fullName>
                </value>
                <value>
                    <fullName>Attorney Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Title Work Job</label>
    <listViews>
        <fullName>Alamo_TitleWorkJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Alamo</label>
        <queue>Alamo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>type__c</columns>
        <columns>status__c</columns>
        <columns>completionDate__c</columns>
        <columns>startDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>titleWorkTracker__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>status__c</columns>
        <columns>type__c</columns>
        <columns>startDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>All - In Progress</label>
    </listViews>
    <listViews>
        <fullName>Attorneys_TitleWorkJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Attorneys</label>
        <queue>Attorneys</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bragg_TitleWorkJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Bragg</label>
        <queue>Bragg</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Reno_TitleWorkJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Reno</label>
        <queue>Reno</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Stockton_TitleWorkJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Stockton</label>
        <queue>Stockton</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned_TitleWorkJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Unassigned</label>
        <queue>Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TWJ-{0000000000}</displayFormat>
        <label>Title Work Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title Work Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Completion_Date</fullName>
        <active>true</active>
        <description>Require Completion Date to set status to Complete.</description>
        <errorConditionFormula>ISPICKVAL(status__c, &apos;Complete&apos;) &amp;&amp;  ISNULL(completionDate__c)</errorConditionFormula>
        <errorMessage>Please enter a Completion Date prior to changing status to Complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Start_Date</fullName>
        <active>true</active>
        <description>Require start date when changing status from Not Started</description>
        <errorConditionFormula>TEXT(status__c) != &apos;Not Started&apos; &amp;&amp; ISBLANK(startDate__c )</errorConditionFormula>
        <errorMessage>For status other than Not Started, Start Date is required.</errorMessage>
    </validationRules>
</CustomObject>